--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "discord.js": "^13.3.1",
-        "node-fetch": "^3.1.0"
+        "node-fetch": "^3.1.0",
+        "replace-special-characters": "^1.2.5"
     }
 }
